[B] Fix table causing horizontal scrolling

--- a/app/assets/stylesheets/partials/_components_tables.scss
+++ b/app/assets/stylesheets/partials/_components_tables.scss
@@ -63,6 +63,12 @@
       text-align: center;
     }
   }
+  thead th, th, td {
+    overflow: hidden;
+    @include respond($baikal) {
+      font-size: $kappa;
+    }
+  }
 }
 
 .column-tight {
